# GGDrive-CLI

./: .gitignore  pyproject.toml
lib/: file_utils.py  ggdrive.py
